--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2358,6 +2358,12 @@
 
 		}
 
+/* Headshots */
+
+    .headshot div {
+    	padding: 0em 2em 0em 4em;
+    }
+
 /* Features */
 
 	.features {
@@ -2379,7 +2385,7 @@
 	}
 
 		.features li {
-			padding: 4em 4em 2em 10em ;
+			padding: 2em 4em 1em 13em ;
 			display: block;
 			position: relative;
 			text-align: left;
@@ -2828,7 +2834,7 @@
 			}
 
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(0, 0, 0, 0.250);
 			}
 
 			.wrapper.style3 header.major p {
