--- a/assets/css/caltree.css
+++ b/assets/css/caltree.css
@@ -1,3 +1,18 @@
 .float-top {
     padding-top: 0px;
 }
+
+.clearfix {
+    overflow: auto;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.column {
+    float: left;
+    padding: 15px;
+}
