--- a/assets/css/caltree.css
+++ b/assets/css/caltree.css
@@ -1,5 +1,5 @@
 .float-top {
-    padding-top: 0px;
+    padding-top: 50px;
 }
 
 .clearfix {
@@ -14,5 +14,5 @@
 
 .column {
     float: left;
-    padding: 15px;
+    padding-left: 150px;
 }
