--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2630,18 +2630,18 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 6em 0 4em 0 ;
+		padding: 3em 0 2em 0 ;
 	}
 
 		.wrapper > .inner {
-			width: 60em;
+			width: auto;
 			margin: 0 auto;
 		}
 
 			@media screen and (max-width: 1280px) {
 
 				.wrapper > .inner {
-					width: 90%;
+					width: auto;
 				}
 
 			}
@@ -2649,7 +2649,7 @@
 			@media screen and (max-width: 980px) {
 
 				.wrapper > .inner {
-					width: 100%;
+					width: auto;
 				}
 
 			}
@@ -3120,6 +3120,11 @@
 					background-color: rgba(0, 0, 0, 0.1);
 				}
 
+				.wrapper.style6 {
+					background-color: #ffffff;
+					color: #000000;
+				}
+
 			@media screen and (max-width: 736px) {
 
 				.wrapper.style5 .features li {
@@ -3131,7 +3136,7 @@
 		@media screen and (max-width: 980px) {
 
 			.wrapper {
-				padding: 4em 3em 2em 3em ;
+				padding: 10em 10em 10em 10em ;
 			}
 
 		}
