--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2634,14 +2634,15 @@
 	}
 
 		.wrapper > .inner {
-			width: auto;
+			width: 55%;
 			margin: auto;
+			display: block;
 		}
 
 			@media screen and (max-width: 1280px) {
 
 				.wrapper > .inner {
-					width: auto;
+					width: 50%;
 				}
 
 			}
@@ -2649,10 +2650,19 @@
 			@media screen and (max-width: 980px) {
 
 				.wrapper > .inner {
-					width: auto;
+					width: 40%;
 				}
 
 			}
+            @media screen and (max-width: 480px) {
+
+				.wrapper > .inner {
+					width: 100%;
+                    align-content: center;
+				}
+
+			}
+
 
 		.wrapper.alt {
 			padding: 0;
